--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glslify-loader": "^2.0.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "prisma": "^5.1.0",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
